[package]
name = "EpiRSVk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.26.0"
winit = "0.25.0"
vulkano-win = "0.26.0"
vulkano-shaders = "0.26.0"
rand = "0.7.3"
tracy-client = "0.12.5"